--- a/dal/index.html
+++ b/dal/index.html
@@ -43,22 +43,25 @@
 
     <!-- Main Content -->
     <main class="container mx-auto px-4 py-16">
-        <div class="max-w-4xl mx-auto text-center text-white">
+        <!-- Hero Section -->
+        <div class="max-w-6xl mx-auto text-center text-white mb-16">
             <h1 class="text-5xl font-bold mb-6">오늘의 달 (Daily DAL)</h1>
             <p class="text-xl mb-4 opacity-90">Data Art Lab의 아름다운 작품들</p>
-            <p class="text-lg opacity-75 mb-12">
+            <p class="text-lg opacity-75">
                 매일 새로운 데이터 아트 작품을 만나보세요.<br>
                 "달" = DAL (Data Art Lab)의 언어유희
             </p>
+        </div>
 
-            <!-- Artwork Grid -->
-            <div id="artwork-grid" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 mt-12">
+        <!-- Artwork Grid -->
+        <div class="max-w-7xl mx-auto">
+            <div id="artwork-grid" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-6 lg:gap-8">
                 <!-- Artworks will be loaded here dynamically -->
             </div>
 
             <!-- Loading State -->
-            <div id="loading" class="text-white opacity-75">
-                <p class="text-lg">작품을 불러오는 중...</p>
+            <div id="loading" class="flex justify-center items-center py-20">
+                <div class="loading"></div>
             </div>
         </div>
     </main>
