--- a/dal.html
+++ b/dal.html
@@ -183,7 +183,42 @@
                         color: #94a3b8;
                         font-family: 'Noto Serif KR', serif;
                     ">페블러스 데이터 아트랩 갤러리</p>
+
+                    <!-- Scroll Down Indicator -->
+                    <div style="
+                        margin-top: 3rem;
+                        display: flex;
+                        flex-direction: column;
+                        align-items: center;
+                        gap: 0.5rem;
+                        animation: float 3s ease-in-out infinite;
+                    ">
+                        <svg width="24" height="36" viewBox="0 0 24 36" style="opacity: 0.3;">
+                            <path d="M12 2 L12 22" stroke="#F86825" stroke-width="1.5" stroke-linecap="round"/>
+                            <path d="M6 16 L12 22 L18 16" stroke="#F86825" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" fill="none"/>
+                        </svg>
+                        <svg width="24" height="36" viewBox="0 0 24 36" style="opacity: 0.5; margin-top: -20px;">
+                            <path d="M12 2 L12 22" stroke="#F86825" stroke-width="1.5" stroke-linecap="round"/>
+                            <path d="M6 16 L12 22 L18 16" stroke="#F86825" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" fill="none"/>
+                        </svg>
+                        <svg width="24" height="36" viewBox="0 0 24 36" style="opacity: 0.7; margin-top: -20px;">
+                            <path d="M12 2 L12 22" stroke="#F86825" stroke-width="1.5" stroke-linecap="round"/>
+                            <path d="M6 16 L12 22 L18 16" stroke="#F86825" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" fill="none"/>
+                        </svg>
+                    </div>
                 </div>
+
+                <!-- CSS Animation -->
+                <style>
+                    @keyframes float {
+                        0%, 100% {
+                            transform: translateY(0);
+                        }
+                        50% {
+                            transform: translateY(10px);
+                        }
+                    }
+                </style>
             </div>
         </div>
 
