--- a/dal.html
+++ b/dal.html
@@ -233,6 +233,109 @@
                 <div class="loading"></div>
             </div>
         </div>
+
+        <!-- DAL Card Styles -->
+        <style>
+            /* DAL Card hover effects */
+            .dal-card {
+                transition: transform 0.4s cubic-bezier(0.4, 0, 0.2, 1), box-shadow 0.4s ease;
+            }
+
+            .dal-card:hover {
+                transform: translateY(-8px);
+                box-shadow: 0 12px 40px rgba(248, 104, 37, 0.15);
+            }
+
+            /* Image hover effects - cool-toned desaturated to full color */
+            .dal-card img {
+                transition: filter 0.8s ease, transform 0.5s ease;
+                filter: grayscale(100%) brightness(1.15) sepia(0.05) hue-rotate(180deg) saturate(0.3);
+            }
+
+            .dal-card:hover img {
+                filter: grayscale(0%) brightness(1) sepia(0) hue-rotate(0deg) saturate(1);
+                transform: scale(1.05);
+            }
+
+            /* Tags scroll container */
+            .tags-container {
+                overflow: hidden;
+                position: relative;
+                width: 100%;
+            }
+
+            /* Gradient overlays for scrollable tags */
+            .tags-container.scrollable::before,
+            .tags-container.scrollable::after {
+                content: '';
+                position: absolute;
+                top: 0;
+                bottom: 0;
+                width: 2rem;
+                pointer-events: none;
+                opacity: 0;
+                transition: opacity 0.3s ease;
+                z-index: 1;
+            }
+
+            .tags-container.scrollable::before {
+                left: 0;
+                background: linear-gradient(to right, white, transparent);
+            }
+
+            .tags-container.scrollable::after {
+                right: 0;
+                background: linear-gradient(to left, white, transparent);
+            }
+
+            /* Show right gradient on card hover */
+            .dal-card:hover .tags-container.scrollable::after {
+                opacity: 1;
+            }
+
+            /* Show left gradient when scrolled */
+            .tags-container.scrollable.scrolled::before {
+                opacity: 1;
+            }
+
+            .tags-scroll {
+                display: inline-flex;
+                gap: 0.5rem;
+                white-space: nowrap;
+                transition: transform 0.3s ease-out;
+                will-change: transform;
+            }
+
+            /* Title color transition */
+            .dal-card h3 {
+                transition: color 0.3s ease;
+            }
+
+            .dal-card:hover h3 {
+                color: #F86825 !important;
+            }
+
+            /* Subtle opacity shifts */
+            .dal-card .text-sm {
+                transition: opacity 0.3s ease;
+                opacity: 0.8;
+            }
+
+            .dal-card:hover .text-sm {
+                opacity: 1;
+            }
+
+            /* Tag hover effect */
+            .dal-card .tag {
+                transition: opacity 0.3s ease, transform 0.3s ease;
+                opacity: 0.85;
+            }
+
+            .dal-card:hover .tag {
+                opacity: 1;
+                transform: translateY(-2px);
+            }
+        </style>
     </main>
 
     <!-- Footer Placeholder -->
@@ -259,7 +362,7 @@
                     return;
                 }
 
-                // Create artwork cards using blog main style
+                // Create artwork cards with DAL styling
                 grid.innerHTML = artworks.map((artwork, index) => {
                     const isExternal = artwork.external || false;
 
@@ -279,7 +382,7 @@
 
                     // Image tag with fallback to Pebblous logo
                     const imageTag = imageUrl
-                        ? `<div class="relative w-full h-48 overflow-hidden bg-slate-100 group/img">
+                        ? `<div class="relative w-full h-48 overflow-hidden bg-slate-100">
                             <img src="${imageUrl}" alt="${artwork.title}"
                                  class="w-full h-48 object-cover"
                                  loading="lazy">
@@ -306,7 +409,7 @@
                     return `
                         <a href="${artworkPath}"
                            ${isExternal ? 'target="_blank" rel="noopener noreferrer"' : ''}
-                           class="rounded-lg overflow-hidden group flex flex-col fade-in shadow-sm hover:shadow-md transition-shadow"
+                           class="dal-card rounded-lg overflow-hidden flex flex-col fade-in"
                            ${animationDelay}>
                             ${imageTag}
                             <div class="p-6 flex-grow">
@@ -314,7 +417,7 @@
                                     <span class="text-xs text-slate-500">${artwork.date || ''}</span>
                                 </div>
                                 ${tagsHtml}
-                                <h3 class="text-xl font-bold transition-colors" style="color: #1e293b;">${artwork.title}</h3>
+                                <h3 class="text-xl font-bold" style="color: #1e293b;">${artwork.title}</h3>
                                 <p class="mt-2 text-sm" style="color: #64748b;">${artwork.description}</p>
                             </div>
                         </a>
@@ -324,7 +427,7 @@
                 loading.style.display = 'none';
 
                 // Initialize fade-in animation
-                const cards = grid.querySelectorAll('.fade-in');
+                const cards = grid.querySelectorAll('.dal-card');
                 const fadeInObserver = new IntersectionObserver((entries) => {
                     entries.forEach(entry => {
                         if (entry.isIntersecting && !entry.target.classList.contains('visible')) {
@@ -340,6 +443,56 @@
                 cards.forEach(card => {
                     fadeInObserver.observe(card);
                 });
+
+                // Initialize tags scroll after a brief delay to ensure proper layout
+                setTimeout(() => {
+                    cards.forEach(card => {
+                        const container = card.querySelector('.tags-container');
+                        const scroll = card.querySelector('.tags-scroll');
+
+                        if (container && scroll) {
+                            // Force layout recalculation
+                            const containerWidth = container.offsetWidth;
+                            const scrollWidth = scroll.scrollWidth;
+                            const scrollDistance = scrollWidth - containerWidth;
+
+                            console.log('Container width:', containerWidth, 'Scroll width:', scrollWidth, 'Distance:', scrollDistance);
+
+                            if (scrollDistance > 5) { // Add small threshold
+                                // Add scrollable class to enable gradients
+                                container.classList.add('scrollable');
+
+                                // Calculate duration based on distance for consistent speed
+                                const scrollSpeed = 50; // pixels per second
+                                const scrollDuration = (scrollDistance / scrollSpeed) * 1000;
+
+                                // Store handlers to avoid duplicates
+                                const handleMouseEnter = () => {
+                                    scroll.style.transform = `translateX(-${scrollDistance}px)`;
+                                    scroll.style.transition = `transform ${scrollDuration}ms linear`;
+
+                                    setTimeout(() => {
+                                        if (scroll.style.transform.includes('-')) {
+                                            container.classList.add('scrolled');
+                                        }
+                                    }, 300);
+                                };
+
+                                const handleMouseLeave = () => {
+                                    scroll.style.transform = 'translateX(0)';
+                                    scroll.style.transition = `transform ${scrollDuration * 0.7}ms linear`;
+
+                                    setTimeout(() => {
+                                        container.classList.remove('scrolled');
+                                    }, 300);
+                                };
+
+                                card.addEventListener('mouseenter', handleMouseEnter);
+                                card.addEventListener('mouseleave', handleMouseLeave);
+                            }
+                        }
+                    });
+                }, 500);
 
             } catch (error) {
                 console.error('Failed to load artworks:', error);
