--- a/dal.html
+++ b/dal.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>오늘의 달 (Daily DAL) - Data Art Lab | Pebblous Blog</title>
+    <title>달 DAL | 페블러스 데이터 아트랩 갤러리</title>
 
     <!-- SEO Meta Tags -->
     <meta name="description" content="매일 새로운 Data Art Lab 작품을 만나보세요. 오늘의 달(DAL)에서 데이터 아트의 아름다움을 경험하세요.">
@@ -23,8 +23,9 @@
     <meta name="twitter:description" content="매일 새로운 Data Art Lab 작품을 만나보세요">
     <meta name="twitter:image" content="https://blog.pebblous.ai/image/og-image.png">
 
-    <!-- Favicon -->
-    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <!-- Favicon - Custom Dal Moon -->
+    <link rel="icon" type="image/svg+xml" href="/image/dal/dal-favicon.svg">
+    <link rel="alternate icon" type="image/x-icon" href="/favicon.ico">
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -455,8 +456,6 @@
                             const containerWidth = container.offsetWidth;
                             const scrollWidth = scroll.scrollWidth;
                             const scrollDistance = scrollWidth - containerWidth;
-
-                            console.log('Container width:', containerWidth, 'Scroll width:', scrollWidth, 'Distance:', scrollDistance);
 
                             if (scrollDistance > 5) { // Add small threshold
                                 // Add scrollable class to enable gradients
