main index.html update

--- a/index.html
+++ b/index.html
@@ -153,20 +153,30 @@
     <header class="fixed top-0 left-0 right-0 z-50 bg-slate-950 border-b border-slate-800" style="transform: translateZ(0); will-change: transform;">
         <div class="container mx-auto px-6 py-4 flex justify-between items-center">
             <a href="/" aria-label="Pebblous 홈페이지">
-                <img src="https://pebblous.github.io/image/Pebblous_BM_White_RGB.png" alt="Pebblous Logo" class="h-7 w-auto object-contain max-w-full" loading="eager">
+                <img id="header-logo" src="https://pebblous.github.io/image/Pebblous_BM_Black_RGB.png" alt="Pebblous Logo" class="h-7 w-auto object-contain max-w-full" loading="eager">
             </a>
             <nav class="hidden md:flex items-center space-x-8 text-sm font-medium text-slate-300" aria-label="Main navigation">
                 <a href="#art" class="hover:text-white transition-colors">Data Art</a>
                 <a href="#tech" class="hover:text-white transition-colors">Tech Insights</a>
                 <a href="#story" class="hover:text-white transition-colors">Data Stories</a>
+                <button id="theme-toggle-btn" class="theme-toggle-btn text-slate-300 hover:text-white" aria-label="테마 변경" title="테마 변경">
+                    <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M7 21a4 4 0 01-4-4V5a2 2 0 012-2h4a2 2 0 012 2v12a4 4 0 01-4 4zm0 0h12a2 2 0 002-2v-4a2 2 0 00-2-2h-2.343M11 7.343l1.657-1.657a2 2 0 012.828 0l2.829 2.829a2 2 0 010 2.828l-8.486 8.485M7 17h.01"></path>
+                    </svg>
+                </button>
                 <button id="stats-icon-btn" class="stats-icon-btn text-slate-300 hover:text-white" aria-label="블로그 통계 보기" title="블로그 통계">
                     <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 19v-6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2a2 2 0 002-2zm0 0V9a2 2 0 012-2h2a2 2 0 012 2v10m-6 0a2 2 0 002 2h2a2 2 0 002-2m0 0V5a2 2 0 012-2h2a2 2 0 012 2v14a2 2 0 01-2 2h-2a2 2 0 01-2-2z"></path>
                     </svg>
                 </button>
-                <a href="https://www.pebblous.ai/en/request" target="_blank" rel="noopener noreferrer" class="bg-slate-800 hover:bg-slate-700 px-4 py-2 rounded-md transition-colors">Contact</a>
+                <a href="https://www.pebblous.ai/en/request" target="_blank" rel="noopener noreferrer" class="contact-btn px-4 py-2 rounded-md transition-colors">Contact</a>
             </nav>
             <div class="flex items-center space-x-3 md:hidden">
+                <button id="theme-toggle-btn-mobile" class="theme-toggle-btn text-white" aria-label="테마 변경" title="테마 변경">
+                    <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M7 21a4 4 0 01-4-4V5a2 2 0 012-2h4a2 2 0 012 2v12a4 4 0 01-4 4zm0 0h12a2 2 0 002-2v-4a2 2 0 00-2-2h-2.343M11 7.343l1.657-1.657a2 2 0 012.828 0l2.829 2.829a2 2 0 010 2.828l-8.486 8.485M7 17h.01"></path>
+                    </svg>
+                </button>
                 <button id="stats-icon-btn-mobile" class="stats-icon-btn text-white" aria-label="블로그 통계 보기" title="블로그 통계">
                     <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 19v-6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2a2 2 0 002-2zm0 0V9a2 2 0 012-2h2a2 2 0 012 2v10m-6 0a2 2 0 002 2h2a2 2 0 002-2m0 0V5a2 2 0 012-2h2a2 2 0 012 2v14a2 2 0 01-2 2h-2a2 2 0 01-2-2z"></path>
@@ -223,10 +233,10 @@
             <div class="relative z-10 max-w-4xl mx-auto">
                 <h1 class="hero-fade-in text-4xl md:text-6xl font-extrabold text-white mb-8" style="line-height: 1.6; animation-delay: 0.2s;">
                     사람과 데이터 사이,<br>
-                    <span class="accent-color">기술과 예술</span>로 더 가깝게.
+                    <span class="accent-color">기술과 예술</span>로 더 가까이
                 </h1>
                 <div class="hero-fade-in mt-12 max-w-3xl mx-auto" style="animation-delay: 0.5s;">
-                    <div class="relative px-8 py-6 rounded-lg border border-slate-700/50 bg-gradient-to-br from-slate-800/60 to-slate-900/60 backdrop-blur-sm">
+                    <div class="hero-card relative px-8 py-6 rounded-lg border backdrop-blur-sm">
                         <p class="text-xl md:text-2xl font-bold text-white tracking-tight mb-3" style="letter-spacing: 0.02em;">
                             Pebblous Makes Data Tangible
                         </p>
@@ -365,6 +375,78 @@
     <div id="modals-container"></div>
 
     <script>
+        // ============================================================
+        // Theme System
+        // ============================================================
+
+        // Theme configuration
+        const THEMES = ['dark', 'light', 'beige'];
+        const THEME_STORAGE_KEY = 'pebblous-theme';
+        const LOGO_URLS = {
+            dark: 'https://pebblous.github.io/image/Pebblous_BM_White_RGB.png',
+            light: 'https://pebblous.github.io/image/Pebblous_BM_Black_RGB.png',
+            beige: 'https://pebblous.github.io/image/Pebblous_BM_Orange_RGB.png'
+        };
+
+        // Get saved theme or default to 'light'
+        function getSavedTheme() {
+            const saved = localStorage.getItem(THEME_STORAGE_KEY);
+            return THEMES.includes(saved) ? saved : 'light';
+        }
+
+        // Update logo based on theme
+        function updateLogo(theme) {
+            const logo = document.getElementById('header-logo');
+            if (logo && LOGO_URLS[theme]) {
+                logo.src = LOGO_URLS[theme];
+            }
+        }
+
+        // Apply theme to document
+        function applyTheme(theme) {
+            // Use requestAnimationFrame to optimize rendering
+            requestAnimationFrame(() => {
+                document.documentElement.setAttribute('data-theme', theme);
+                localStorage.setItem(THEME_STORAGE_KEY, theme);
+                updateLogo(theme);
+            });
+        }
+
+        // Debounced theme rotation to prevent rapid flickering
+        let themeRotateTimeout;
+        function rotateTheme() {
+            // Clear any pending theme changes
+            if (themeRotateTimeout) {
+                clearTimeout(themeRotateTimeout);
+            }
+
+            // Debounce theme rotation by 100ms
+            themeRotateTimeout = setTimeout(() => {
+                const currentTheme = document.documentElement.getAttribute('data-theme') || 'dark';
+                const currentIndex = THEMES.indexOf(currentTheme);
+                const nextIndex = (currentIndex + 1) % THEMES.length;
+                applyTheme(THEMES[nextIndex]);
+            }, 100);
+        }
+
+        // Initialize theme on page load
+        document.addEventListener('DOMContentLoaded', () => {
+            const savedTheme = getSavedTheme();
+            applyTheme(savedTheme);
+
+            // Add event listeners to both desktop and mobile theme toggle buttons
+            const desktopToggle = document.getElementById('theme-toggle-btn');
+            const mobileToggle = document.getElementById('theme-toggle-btn-mobile');
+
+            if (desktopToggle) {
+                desktopToggle.addEventListener('click', rotateTheme);
+            }
+
+            if (mobileToggle) {
+                mobileToggle.addEventListener('click', rotateTheme);
+            }
+        });
+
         // Mobile Menu Toggle
         const mobileMenuBtn = document.getElementById('mobile-menu-btn');
         const mobileMenu = document.getElementById('mobile-menu');
@@ -754,7 +836,7 @@
                     if (hasLess) {
                         const showLessBtn = document.createElement('button');
                         showLessBtn.id = `showless-${category}`;
-                        showLessBtn.className = 'px-4 sm:px-8 py-3 bg-slate-700/50 hover:bg-slate-600/50 active:bg-slate-600 text-slate-300 text-sm sm:text-base font-semibold rounded-md transition-colors whitespace-nowrap';
+                        showLessBtn.className = 'show-less-btn px-4 sm:px-8 py-3 text-white text-sm sm:text-base font-semibold rounded-md transition-colors whitespace-nowrap';
                         showLessBtn.textContent = '적게 보기';
                         showLessBtn.setAttribute('type', 'button');
 
@@ -776,7 +858,7 @@
                     if (hasMore) {
                         const loadMoreBtn = document.createElement('button');
                         loadMoreBtn.id = `loadmore-${category}`;
-                        loadMoreBtn.className = 'px-4 sm:px-8 py-3 bg-slate-800 hover:bg-slate-700 active:bg-slate-700 text-white text-sm sm:text-base font-semibold rounded-md transition-colors whitespace-nowrap';
+                        loadMoreBtn.className = 'load-more-btn px-4 sm:px-8 py-3 text-white text-sm sm:text-base font-semibold rounded-md transition-colors whitespace-nowrap';
                         const remaining = articles.length - currentDisplayCount;
                         loadMoreBtn.textContent = `더 보기 (${remaining})`;
                         loadMoreBtn.setAttribute('type', 'button');
@@ -1360,62 +1442,56 @@
         if (!isMobile) {
             (function() {
                 const canvas = document.getElementById('particle-canvas');
-                const ctx = canvas.getContext('2d');
+                if (!canvas) return;
+
+                const ctx = canvas.getContext('2d', { alpha: true });
+                if (!ctx) return;
 
                 let particles = [];
                 const particleCount = 100;
                 const maxDistance = 150;
 
-                // Virtual canvas size proportional to actual screen width
-                let VIRTUAL_WIDTH = window.innerWidth;
-                let VIRTUAL_HEIGHT = window.innerHeight;
-
                 function setCanvasSize() {
-                    canvas.width = window.innerWidth;
-                    canvas.height = window.innerHeight;
-                    // Update virtual dimensions to match screen proportions
-                    VIRTUAL_WIDTH = window.innerWidth;
-                    VIRTUAL_HEIGHT = window.innerHeight;
+                    const dpr = window.devicePixelRatio || 1;
+                    const rect = canvas.getBoundingClientRect();
+
+                    // Set display size (css pixels)
+                    canvas.style.width = rect.width + 'px';
+                    canvas.style.height = rect.height + 'px';
+
+                    // Set actual size in memory (scaled for retina)
+                    canvas.width = rect.width * dpr;
+                    canvas.height = rect.height * dpr;
+
+                    // Scale context to ensure correct drawing operations
+                    ctx.scale(dpr, dpr);
                 }
 
             class Particle {
                 constructor() {
-                    // Position in virtual space (proportional to screen width)
-                    this.virtualX = Math.random() * VIRTUAL_WIDTH;
-                    this.virtualY = Math.random() * VIRTUAL_HEIGHT;
+                    this.x = Math.random() * window.innerWidth;
+                    this.y = Math.random() * window.innerHeight;
                     this.radius = Math.random() * 2 + 1;
                     this.vx = (Math.random() - 0.5) * 0.3;
                     this.vy = (Math.random() - 0.5) * 0.3;
                 }
 
-                getScreenPosition() {
-                    // Scale virtual position to actual screen size
-                    const scaleX = canvas.width / VIRTUAL_WIDTH;
-                    const scaleY = canvas.height / VIRTUAL_HEIGHT;
-                    return {
-                        x: this.virtualX * scaleX,
-                        y: this.virtualY * scaleY
-                    };
-                }
-
                 draw() {
-                    const pos = this.getScreenPosition();
                     ctx.beginPath();
-                    ctx.arc(pos.x, pos.y, this.radius, 0, Math.PI * 2);
+                    ctx.arc(this.x, this.y, this.radius, 0, Math.PI * 2);
                     ctx.fillStyle = 'rgba(248, 104, 37, 1)';
                     ctx.fill();
                 }
 
                 update() {
-                    // Update position in virtual space
-                    this.virtualX += this.vx;
-                    this.virtualY += this.vy;
+                    this.x += this.vx;
+                    this.y += this.vy;
 
-                    // Wrap around edges in virtual space
-                    if (this.virtualX < 0) this.virtualX = VIRTUAL_WIDTH;
-                    if (this.virtualX > VIRTUAL_WIDTH) this.virtualX = 0;
-                    if (this.virtualY < 0) this.virtualY = VIRTUAL_HEIGHT;
-                    if (this.virtualY > VIRTUAL_HEIGHT) this.virtualY = 0;
+                    // Wrap around edges
+                    if (this.x < 0) this.x = window.innerWidth;
+                    if (this.x > window.innerWidth) this.x = 0;
+                    if (this.y < 0) this.y = window.innerHeight;
+                    if (this.y > window.innerHeight) this.y = 0;
                 }
             }
 
@@ -1432,16 +1508,14 @@
             function connectParticles() {
                 for (let i = 0; i < particles.length; i++) {
                     for (let j = i + 1; j < particles.length; j++) {
-                        const pos1 = particles[i].getScreenPosition();
-                        const pos2 = particles[j].getScreenPosition();
-                        const dx = pos1.x - pos2.x;
-                        const dy = pos1.y - pos2.y;
+                        const dx = particles[i].x - particles[j].x;
+                        const dy = particles[i].y - particles[j].y;
                         const distance = Math.sqrt(dx * dx + dy * dy);
 
                         if (distance < maxDistance) {
                             ctx.beginPath();
-                            ctx.moveTo(pos1.x, pos1.y);
-                            ctx.lineTo(pos2.x, pos2.y);
+                            ctx.moveTo(particles[i].x, particles[i].y);
+                            ctx.lineTo(particles[j].x, particles[j].y);
                             ctx.strokeStyle = `rgba(248, 104, 37, ${(1 - distance / maxDistance) * 0.8})`;
                             ctx.lineWidth = 1.5;
                             ctx.stroke();
@@ -1454,7 +1528,7 @@
             const fps = 30; // Limit to 30 FPS for better performance
             const interval = 1000 / fps;
 
-            function animate(currentTime) {
+            function animate(currentTime = 0) {
                 requestAnimationFrame(animate);
 
                 const elapsed = currentTime - lastTime;
@@ -1462,7 +1536,9 @@
 
                 lastTime = currentTime - (elapsed % interval);
 
-                ctx.clearRect(0, 0, canvas.width, canvas.height);
+                // Use CSS pixel dimensions for clearing
+                const rect = canvas.getBoundingClientRect();
+                ctx.clearRect(0, 0, rect.width, rect.height);
 
                 particles.forEach(p => {
                     p.update();
@@ -1472,14 +1548,20 @@
                 connectParticles();
             }
 
+            let resizeTimeout;
             window.addEventListener('resize', () => {
-                setCanvasSize();
-                initParticles();
+                clearTimeout(resizeTimeout);
+                resizeTimeout = setTimeout(() => {
+                    // Recreate particles with new dimensions
+                    particles = [];
+                    setCanvasSize();
+                    initParticles();
+                }, 250);
             });
 
             setCanvasSize();
             initParticles();
-            animate();
+            requestAnimationFrame(animate);
         })();
         } // End of if (!isMobile)
 
