--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
     <canvas id="particle-canvas"></canvas>
 
     <!-- Header -->
-    <header class="fixed top-0 left-0 right-0 z-50 bg-slate-950 border-b border-slate-800" style="transform: translateZ(0); will-change: transform;">
+    <header id="main-header" class="fixed top-0 left-0 right-0 z-50 bg-slate-950 border-b border-slate-800 transition-all duration-300" style="position: fixed !important; top: 0 !important; left: 0 !important; right: 0 !important;">
         <div class="container mx-auto px-6 py-4 flex justify-between items-center">
             <a href="/" aria-label="Pebblous 홈페이지">
                 <img id="header-logo" src="https://pebblous.github.io/image/Pebblous_BM_Black_RGB.png" alt="Pebblous Logo" class="h-7 w-auto object-contain max-w-full" loading="eager">
@@ -1472,8 +1472,27 @@
                     this.x = Math.random() * window.innerWidth;
                     this.y = Math.random() * window.innerHeight;
                     this.radius = Math.random() * 2 + 1;
-                    this.vx = (Math.random() - 0.5) * 0.3;
-                    this.vy = (Math.random() - 0.5) * 0.3;
+
+                    // Three speed clusters: fast, medium, slow
+                    const speedCluster = Math.random();
+                    let speedMultiplier;
+
+                    if (speedCluster < 0.33) {
+                        // Fast cluster (33% of particles) - 2-3x speed
+                        speedMultiplier = 2.0 + Math.random() * 1.0;
+                        this.cluster = 'fast';
+                    } else if (speedCluster < 0.66) {
+                        // Medium cluster (33% of particles) - 1-2x speed
+                        speedMultiplier = 1.0 + Math.random() * 1.0;
+                        this.cluster = 'medium';
+                    } else {
+                        // Slow cluster (34% of particles) - 0.5-1x speed
+                        speedMultiplier = 0.5 + Math.random() * 0.5;
+                        this.cluster = 'slow';
+                    }
+
+                    this.vx = (Math.random() - 0.5) * 0.6 * speedMultiplier;
+                    this.vy = (Math.random() - 0.5) * 0.6 * speedMultiplier;
                 }
 
                 draw() {
@@ -1575,6 +1594,42 @@
                 heroElements.forEach(el => el.classList.add('animate'));
             }, 100);
         });
+
+        // ============================================================
+        // Header Scroll Effect
+        // ============================================================
+
+        let lastScrollY = 0;
+        const header = document.getElementById('main-header');
+
+        function updateHeader() {
+            const currentScrollY = window.scrollY;
+
+            if (currentScrollY > 50) {
+                // Scrolled down - add backdrop blur and shadow
+                header.classList.add('backdrop-blur-md', 'shadow-lg');
+                header.style.backgroundColor = 'var(--header-bg)';
+            } else {
+                // At top - remove effects
+                header.classList.remove('backdrop-blur-md', 'shadow-lg');
+            }
+
+            lastScrollY = currentScrollY;
+        }
+
+        // Throttle scroll events for performance
+        let scrollTimeout;
+        window.addEventListener('scroll', () => {
+            if (!scrollTimeout) {
+                scrollTimeout = setTimeout(() => {
+                    updateHeader();
+                    scrollTimeout = null;
+                }, 10);
+            }
+        }, { passive: true });
+
+        // Initial check
+        updateHeader();
 
         // ============================================================
         // Service Worker Registration (for caching)
