--- a/index.html
+++ b/index.html
@@ -119,6 +119,64 @@
     }
     </script>
 
+    <!-- FAQ Schema -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "FAQPage",
+      "mainEntity": [
+        {
+          "@type": "Question",
+          "name": "페블러스(Pebblous)는 어떤 회사인가요?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "페블러스(Pebblous)는 AI 데이터 품질관리 전문 딥테크 스타트업입니다. 눈에 보이지 않는 데이터의 우주를 탐험하고, 그 본질을 만질 수 있는 형태로 바꾸어 새로운 문화와 가치를 창조합니다. DataClinic™(데이터 품질 진단 및 개선)과 PebbloScope™(데이터 시각화 도구)를 제공하며, ISO/IEC 5259 표준 기반의 AI 데이터 품질 측정 기술을 보유하고 있습니다."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "DataClinic(데이터클리닉)은 무엇인가요?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "DataClinic(데이터클리닉)은 페블러스의 핵심 제품으로, AI 학습 데이터의 품질을 진단하고 개선하는 솔루션입니다. 데이터 이미징 기술을 통해 고차원 임베딩 공간에서 데이터의 유사성, 대표성, 다양성을 정량적으로 측정하고, ISO/IEC 5259-2 표준에 따라 데이터 품질 문제를 진단합니다. Physical AI, 자율주행, 제조업 등 고위험 AI 시스템의 데이터 품질 관리에 특화되어 있습니다."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "페블러스는 어떤 기술을 보유하고 있나요?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "페블러스는 미국 특허 US 12,481,720 B2를 보유하고 있으며, 이는 데이터 이미징과 임베딩 공간 분석을 통해 AI 데이터 품질을 진단하고 개선하는 독점 기술입니다. 이 특허는 2042년까지 유효하며, ISO/IEC 5259-2 표준의 품질 특성(유사성, 대표성, 다양성, 완전성)을 정량적으로 측정하는 유일한 실용적 구현 방법을 제공합니다. 또한 Data Diet(중복 제거), Data Bulk-up(합성 데이터 생성), PebbloScope(시각화) 등 통합 솔루션을 보유하고 있습니다."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "페블러스의 주요 고객은 누구인가요?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "페블러스는 Physical AI, 자율주행, 로봇, 스마트 팩토리, 의료 기기 등 고위험 AI 시스템을 개발하는 기업들을 주요 고객으로 합니다. 특히 EU AI Act 등 AI 규제 준수가 필요한 기업, 데이터 품질 문제로 AI 모델 성능이 저하된 기업, 합성 데이터 생성 전략이 필요한 기업들이 DataClinic을 활용하여 데이터 품질을 개선하고 있습니다."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "PebbloScope(페블로스코프)는 무엇인가요?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "PebbloScope(페블로스코프)는 페블러스의 데이터 시각화 도구로, 고차원 데이터를 2D/3D 임베딩 공간에 매핑하여 시각적으로 탐색할 수 있게 해주는 솔루션입니다. 데이터의 분포, 클러스터, 이상치, 밀도 등을 직관적으로 파악할 수 있어 데이터 과학자와 AI 엔지니어들이 데이터셋의 품질 문제를 빠르게 진단할 수 있습니다. DataClinic의 진단 결과를 시각화하는 핵심 엔진입니다."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "페블러스는 Physical AI와 어떤 관련이 있나요?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "페블러스는 Physical AI(피지컬 AI) 시대를 위한 데이터 품질관리 솔루션을 제공합니다. Physical AI는 로봇, 자율주행차, 스마트 팩토리 등 물리 세계에서 작동하는 AI로, 데이터 품질 오류가 안전 사고로 직결되기 때문에 엄격한 데이터 품질 관리가 필수입니다. 페블러스의 DataClinic은 이미지, 센서, 멀티모달 데이터의 품질을 ISO 5259 기준에 따라 정량적으로 측정하고 증명할 수 있는 유일한 기술적 해답을 제공하여, Physical AI 시장에서 경쟁 우위를 확보하고 있습니다."
+          }
+        }
+      ]
+    }
+    </script>
+
     <!-- RSS Feed -->
     <link rel="alternate" type="application/rss+xml" title="Pebblous Blog RSS Feed" href="https://blog.pebblous.ai/rss.xml">
 
