--- a/index.html
+++ b/index.html
@@ -916,7 +916,7 @@
                     if (hasMore) {
                         const loadMoreBtn = document.createElement('button');
                         loadMoreBtn.id = `loadmore-${category}`;
-                        loadMoreBtn.className = 'load-more-btn px-4 sm:px-8 py-3 text-white text-sm sm:text-base font-semibold rounded-md transition-colors whitespace-nowrap';
+                        loadMoreBtn.className = 'load-more-btn px-4 sm:px-8 py-3 text-sm sm:text-base font-semibold rounded-md transition-colors whitespace-nowrap';
                         const remaining = articles.length - currentDisplayCount;
                         loadMoreBtn.textContent = `더 보기 (${remaining})`;
                         loadMoreBtn.setAttribute('type', 'button');
